# alien-boogie

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: alien.cpp  alien.hpp  audio_capture.cpp  audio_capture.hpp  main.cpp  score_label.cpp  score_label.hpp
